added better popup behavior on desktop, better touch behavior on mobile

--- a/src/components/CircularItem/CircularItem.module.css
+++ b/src/components/CircularItem/CircularItem.module.css
@@ -95,6 +95,20 @@
 }
 
 @media (max-width: 768px) {
+  .circularItem {
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .circularItem:hover {
+    transform: none;
+  }
+
+  .circularItem:hover .circularOverlay {
+    opacity: 0;
+  }
+
   .circularItem:hover .circularImage {
     transform: none;
   }
