fixed some margins

--- a/src/components/ListWithPagination/ListWithPagination.module.css
+++ b/src/components/ListWithPagination/ListWithPagination.module.css
@@ -48,7 +48,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 24px 0;
+  padding-bottom: 16px;
   border-bottom: 1px solid rgba(255, 255, 255, 1);
 }
 
