--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -3,92 +3,90 @@
   min-height: calc(100vh - 60px);
   background-color: var(--dark-primary);
   color: var(--light-primary);
-  padding: var(--spacing-xl) var(--spacing-md);
+  padding: var(--spacing-xl) 0;
 }
 
 .gridLayout {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-auto-rows: minmax(150px, auto);
+  grid-template-rows: repeat(5, minmax(150px, auto));
   gap: 24px;
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 24px;
-}
-a {
-  text-decoration: none;
-  color: var(--light-primary);
-}
-
-.titleArea {
-  grid-column: 1 / 4;
-  grid-row: 1 / 2;
-  margin-bottom: 0;
-  display: flex;
-  align-items: end;
-}
-
-.gridText {
-  margin: 0;
 }
 
 .imageContainer {
   width: 100%;
   height: 100%;
   min-height: 300px;
-  overflow: auto;
   background-color: var(--dark-primary);
 }
 
 .image {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
   display: block;
 }
 
-/*Intro Text Box */
+a {
+  text-decoration: none;
+  color: var(--light-primary);
+}
+
+/* Fixed grid layout */
 .blockOne {
   grid-column: 1 / 3;
-  grid-row: 2 / 3;
-}
-
-.blockOne > p {
-  margin: 0;
-}
-
-/*Panopticon */
-.blockTwo {
-  grid-column: 3 / 6;
-  grid-row: 2 / 4;
-}
-
-/*logo */
-.blockThree {
-  grid-column: 1 / 3;
-  grid-row: 3 / 5;
-}
-
-.blockFour {
-  grid-column: 3 / 4;
-  grid-row: 4 / 5;
+  grid-row: 1 / 2;
   display: flex;
   align-items: center;
 }
 
+.blockOne p {
+  margin: 0;
+}
+
+.blockTwo {
+  grid-column: 3 / 6;
+  grid-row: 1 / 3;
+}
+
+.blockThree {
+  grid-column: 1 / 3;
+  grid-row: 2 / 4;
+}
+
+.blockFour {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+  display: flex;
+  align-items: center;
+}
+
+.blockFour p {
+  margin: 0;
+}
+
 .blockFive {
   grid-column: 4 / 6;
-  grid-row: 4 / 6;
+  grid-row: 3 / 5;
 }
 
 .blockSix {
   grid-column: 1 / 4;
-  grid-row: 5 / 7;
+  grid-row: 4 / 6;
 }
 
 .blockSeven {
   grid-column: 4 / 6;
-  grid-row: 6 / 7;
+  grid-row: 5 / 6;
+  display: flex;
+  align-items: center;
+}
+
+.blockSeven p {
+  margin: 0;
 }
 
 @media (max-width: 1024px) {
@@ -102,18 +100,39 @@ a {
 @media (max-width: 768px) {
   .gridLayout {
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
   }
 
-  .blockOne,
-  .blockTwo,
-  .blockFour,
-  .blockFive,
-  .blockSeven {
-    grid-column: span 2;
-    grid-row: auto;
+  .blockOne {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
   }
-  .blockThree,
+
+  .blockTwo {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .blockThree {
+    display: none;
+  }
+
+  .blockFour {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .blockFive {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+  }
+
   .blockSix {
     display: none;
+  }
+
+  .blockSeven {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6;
   }
 }
