--- a/src/pages/Photography/Photography.module.css
+++ b/src/pages/Photography/Photography.module.css
@@ -4,7 +4,11 @@
   background-color: var(--dark-primary);
   color: var(--light-primary);
   min-height: calc(100vh - 60px);
-  padding: 2rem 1rem;
+  padding: 0 1rem;
+}
+.photographyPage {
+  background-color: var(--dark-primary);
+  padding: var(--spacing-xl) 0;
 }
 
 .title {
@@ -12,6 +16,9 @@
   font-size: 2.5rem;
   text-align: center;
   margin-bottom: 2rem;
+}
+.titleContiner {
+  padding-left: 0;
 }
 
 .myMasonryGrid {
