made mobile blog a more enjoyable read, gotta add a way to choose posts, maybe a ribbon of sorts

--- a/src/pages/Blog/Blog.module.css
+++ b/src/pages/Blog/Blog.module.css
@@ -75,6 +75,9 @@
     grid-template-columns: 1fr;
   }
   .contentWrapper {
-    padding: 0 16px;
+    padding: 0;
+  }
+  .blogPageContainer {
+    padding: 0;
   }
 }
