--- a/src/components/BlogPost/BlogPost.module.css
+++ b/src/components/BlogPost/BlogPost.module.css
@@ -81,4 +81,10 @@
     display: flex;
     flex-direction: column;
   }
+  .blogPost {
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    padding-bottom: 0px;
+  }
 }
