finally actually made viewing blog posts on mobile pleasant

--- a/src/components/BlogPost/BlogPost.module.css
+++ b/src/components/BlogPost/BlogPost.module.css
@@ -86,5 +86,7 @@
     border-left: none;
     border-bottom: none;
     padding-bottom: 0px;
+    padding-left: 8px;
+    padding-right: 8px;
   }
 }
