refactored photography section to add position

--- a/src/pages/Blog/Blog.module.css
+++ b/src/pages/Blog/Blog.module.css
@@ -71,13 +71,15 @@
 }
 
 @media (max-width: 768px) {
+  .blogPageContainer {
+  }
   .blogGrid {
     grid-template-columns: 1fr;
   }
   .contentWrapper {
     padding: 0;
   }
-  .blogPageContainer {
+  /* .blogPageContainer {
     padding: 0;
-  }
+  } */
 }
